# prelegal

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  catalog.json  render.yaml
.claude/skills/cerebras/: SKILL.md
backend/: Dockerfile  pyproject.toml
backend/app/: auth.py  chat.py  database.py  documents_router.py  limiter.py  main.py
backend/tests/: conftest.py  test_auth.py  test_documents.py
frontend/: .gitignore  jest.config.js  package-lock.json  package.json  playwright.config.ts
frontend/__tests__/components/: NDAForm.test.tsx  NDAPreview.test.tsx
frontend/__tests__/lib/: auth.test.ts  download.test.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: ChatPanel.tsx  DocumentCatalog.tsx  DocumentForm.tsx  DocumentPreview.tsx  NDAForm.tsx  NDAPreview.tsx
frontend/app/lib/: auth.ts  documents.ts  download.ts  types.ts
frontend/app/login/: page.tsx
frontend/app/signup/: page.tsx
frontend/e2e/: nda-creator.spec.ts
scripts/: start-linux.sh  start-mac.sh  start-windows.ps1  stop-mac.sh  stop-windows.ps1
templates/: LICENSE.txt
